# feed-forward-neural-network

./: .gitignore  CMakeLists.txt  README.md
include/Google_tests/: CMakeLists.txt
include/Google_tests/lib/googletest/cmake/: internal_utils.cmake
include/Google_tests/lib/googletest/include/gtest/: gtest-param-test.h
src/: basics.h  main.cpp
src/activation_functions/: fast_sigmoid.h  fast_sigmoid.hpp  functions_enum.h  functions_enum.hpp  relu.h  relu.hpp  sigmoid.cpp  sigmoid.h  sigmoid.hpp  softmax.h  softmax.hpp  template.h  template.hpp
src/csv/: csv_reader.cpp  csv_reader.h  csv_reader.hpp  csv_writer.h  csv_writer.hpp
src/data_manager/: data_manager.cpp  data_manager.h  data_manager.hpp
src/data_structures/: matrix.cpp  matrix.h  matrix.hpp  matrix_doublevec.h  matrix_singlevec.h
src/network/: config.cpp  config.h  config.hpp  network.cpp  network.h  network.hpp
src/optimizers/: adam.h  adam.hpp  optimizer_template.h  optimizer_template.hpp  optimizers_enum.h  sgd.h  sgd.hpp
src/schedulers/: lr_sheduler.cpp  lr_sheduler.h  lr_sheduler.hpp
src/statistics/: accuracy.h  accuracy.hpp  argmax.h  crossentropy.h  crossentropy.hpp  stats.hpp  stats_printer.h  weights_info.h  weights_info.hpp
src/utils/: config_tester.cpp  config_tester.h  config_tester.hpp  util_functions.cpp  util_functions.h  util_functions.hpp
tests/: basics_tests.cpp  csv_tests.cpp  matrix_tests.cpp
